--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="/TextAnalyzer//index.html/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link active" href="/TextAnalyzer/about.html/">About</a>
                     </li>                 
                     <li class="nav-item">
-                        <a class="nav-link " href="/contact.html">Contact</a>
+                        <a class="nav-link " href="/TextAnalyzer/contact.html/">Contact</a>
                     </li>
                 </ul>
             </div>
